Bug 1811991 - Backout GPU Sandbox filesystem blocking r=handyman

The filesystem blocking breaks Raptor tests and other programs that rely on
screen recording.

Will have to remote the screen recording and then re-enable filesystem blocking

Differential Revision: https://phabricator.services.mozilla.com/D168411